src/test/deca/context/invalid/param_name_type.deca
//ERROR :3
class A{
void affiche(int int){
}
}